# student_project_mood_diary

./: main.py  nested_dictionary.py  pyproject.toml
