[tool.poetry]
name = "student-project-mood-diary"
version = "0.1.0"
description = "streamlit application plotting a data for a mood"
authors = ["ikari2k <pluta.m@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
plotly = "^5.18.0"
streamlit = "^1.31.0"
nltk = "^3.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
